--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -600,7 +600,7 @@ input, select, textarea {
 
 /* Icon */
 
-	/* .icon {
+	.icon {
 		text-decoration: none;
 		border-bottom: none;
 		position: relative;
@@ -633,7 +633,7 @@ input, select, textarea {
 
 		.icon.brands:before {
 			font-family: 'Font Awesome 5 Brands';
-		} */
+		}
 
 /* Image */
 
@@ -1155,7 +1155,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
+			background-image: url("../../images/bg3.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1545,7 +1545,7 @@ input, select, textarea {
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
-			background-color: rgba(27, 31, 34, 0.85);
+			background-color: rgba(27, 31, 34, 0.65);
 			border-radius: 4px;
 			opacity: 0;
 		}
